# llama-tree

./: README.md  pyproject.toml  requirements.txt
app/: app_extract.txt  main.py  settings.py
app/agents/: query_agent.py
app/engine/: index.py
app/engine/loaders/: file.py
app/utils/: utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
