[tool.poetry]
name = "llamatree"
version = "0.1.0"
description = "Llama Tree project"
authors = ["tricodex"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pymilvus = "^2.4.4"
llama-index = "^0.7.7"
python-dotenv = "^0.19.0"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
